--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
       <img src="./img/menu-btn.png" alt="" class="menu-btn" />
     </nav>
     <header>
-      <div class="header-content" id="home">
-        <h2>Adventure Awaits</h2>
-        <div class="line"></div>
-        <h1>DISCOVER NEW HORIZONS</h1>
-        <a href="#" class="ctn">Start Your Journey</a>
+      <div class="inner-header">
+        <div class="header-content" id="home">
+          <h2>Adventure Awaits</h2>
+          <div class="line"></div>
+          <h1>DISCOVER NEW HORIZONS</h1>
+          <a href="#" class="ctn">Start Your Journey</a>
+        </div>
       </div>
     </header>
 
